--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "name" : "和社区安卓版",
     "appid" : "__UNI__E76BD18",
     "description" : "",
-    "versionName" : "1.1.21",
+    "versionName" : "1.1.23",
     "versionCode" : "100",
     "transformPx" : false,
     /* 5+App特有相关 */
@@ -11,7 +11,7 @@
         "nvueCompiler" : "uni-app",
         "splashscreen" : {
             "alwaysShowBeforeRender" : true,
-            "waiting" : true,
+            "waiting" : false,
             "autoclose" : true,
             "delay" : 0
         },
